fix for serch icon shifting on mobile

--- a/src/styles/layouts/header.scss
+++ b/src/styles/layouts/header.scss
@@ -179,8 +179,10 @@ header {
   font-size: 1em;
   @include mix.special-text;
   &:hover {
-    background-size: auto 24px;
-    background-position: 0px center;
+    @media (min-width: 1200px) {
+      background-size: auto 24px;
+      background-position: 0px center;
+    }
   }
   @media (min-width: 1200px) {
     padding-right: 20px;
